--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,3 +22,23 @@ body {
   flex-direction: column;
   justify-content: space-between;
 }
+
+.header {
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #9361bf;
+}
+
+.header h1 {
+  color: white;
+}
+.header input {
+  height: 25px;
+  width: 250px;
+  padding: 6px;
+  border-radius: 4px;
+  border: 1px solid black;
+}
