--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,3 +42,34 @@ body {
   border-radius: 4px;
   border: 1px solid black;
 }
+
+#todo-list {
+  list-style-type: none;
+  padding: 5px 5px 0px 5px;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: baseline;
+}
+#todo-list li {
+  padding: 15px;
+  margin-bottom: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  background-color: rgba(0, 0, 0, 0.09);
+}
+
+.delete {
+  display: block;
+  background-color: #9361bf;
+  padding: 6px;
+  border: 0;
+  border-radius: 4px;
+  color: white;
+  cursor: pointer;
+}
+.delete:hover {
+  background-color: black;
+}
