--- a/public/css/style.css
+++ b/public/css/style.css
@@ -73,3 +73,25 @@ body {
 .delete:hover {
   background-color: black;
 }
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+}
+.footer button {
+  background-color: #9361bf;
+  padding: 6px;
+  border: 0;
+  border-radius: 4px;
+  color: white;
+  cursor: pointer;
+}
+.footer input {
+  height: 25px;
+  width: 250px;
+  padding: 6px;
+  border-radius: 4px;
+  border: 1px solid black;
+}
